# docs/swagger.json
@@ -3816,10 +3816,10 @@
         "ne-project_src_internal_models_dto.AuthTokenResponse": {
             "type": "object",
             "properties": {
-                "accessToken": {
+                "access_token": {
                     "type": "string"
                 },
-                "expiresAt": {
+                "expires_at": {
                     "type": "integer"
                 },
                 "user": {
@@ -4266,10 +4266,10 @@
         "ne-project_src_internal_models_dto.GoogleLoginRequest": {
             "type": "object",
             "required": [
-                "idToken"
+                "id_token"
             ],
             "properties": {
-                "idToken": {
+                "id_token": {
                     "type": "string"
                 }
             }
@@ -4314,10 +4314,10 @@
         "ne-project_src_internal_models_dto.LoginResponse": {
             "type": "object",
             "properties": {
-                "accessToken": {
+                "access_token": {
                     "type": "string"
                 },
-                "expiresAt": {
+                "expires_at": {
                     "type": "integer"
                 },
                 "message": {
@@ -4814,11 +4814,11 @@
         "ne-project_src_internal_models_dto.ResetPasswordRequest": {
             "type": "object",
             "required": [
-                "newPassword",
+                "new_password",
                 "token"
             ],
             "properties": {
-                "newPassword": {
+                "new_password": {
                     "type": "string",
                     "minLength": 6
                 },
@@ -5447,13 +5447,13 @@
             "type": "object",
             "required": [
                 "email",
-                "otpCode"
+                "otp_code"
             ],
             "properties": {
                 "email": {
                     "type": "string"
                 },
-                "otpCode": {
+                "otp_code": {
                     "type": "string"
                 }
             }
